<resources>
    <string name="app_name">Kitchen_Witchen</string>
    <string name="email">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="pass">Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="link_to_signIn">New here! sign up to continue</string>

    <string name="admin_mail">admin@kitchen.com</string>
    <string name="admin_pass">admin</string>
    <string name="title_activity_admin_home">admin_home</string>

    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu">Menu (categories)</string>
    <string name="cart">Cart</string>
    <string name="logout">Sign out</string>

    <string name="home_second">Category</string>
    <string name="dish">dish name</string>
    <string name="view_dishes">VIEW DISHES</string>
    <string name="price">Price</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="location">Location</string>
    <string name="view_dish">View Dish</string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="Order">Orders</string>
    <string name="info">Feel free to contact us at</string>
    <string name="users">Users</string>
    <string name="dishes">Dishes</string>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Category</string>
</resources>
