<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_24dp"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_24dp"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/Order" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_phone_in_talk_24"
            android:title="Contact Us" />
        <item
            android:id="@+id/nav_out"
            android:icon="@drawable/ic_exit_to_app_24dp"
            android:title="@string/logout" />
    </group>
</menu>
