<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edt_cat"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_edt_dishes"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/dishes" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/users" />
    </group>
    <group>
        <item
        android:id="@+id/nav_edit_phone"
        android:icon="@drawable/ic_baseline_phone_24"
        android:title="Edit Contact"/>
        <item
            android:id="@+id/nav_edit_location"
            android:icon="@drawable/ic_baseline_edit_location_24"
            android:title="Edit Location"/>
    </group>
</menu>