<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_cat_menu"
        android:name="pk.edu.pucit.kitchen_witchenmc_project.ui.home.Category"
        android:label="@string/menu"
        tools:layout="@layout/cat_menu">

        <action
            android:id="@+id/action_Category_to_mainMenu"
            app:destination="@id/nav_main_menu" />
    </fragment>
    <fragment
        android:id="@+id/nav_main_menu"
        android:name="pk.edu.pucit.kitchen_witchenmc_project.ui.home.mainMenu"
        android:label="@string/home_second"
        tools:layout="@layout/main_menu">
        <action
            android:id="@+id/action_CategoryFragment_to_dish"
            app:destination="@id/nav_dish" />

    </fragment>
    <fragment
    android:id="@+id/nav_dish"
    android:name="pk.edu.pucit.kitchen_witchenmc_project.ui.home.dish"
    android:label="@string/dish"
    tools:layout="@layout/dish">
    <action
        android:id="@+id/action_dish_to_cart"
        app:destination="@id/nav_cart" />

</fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="pk.edu.pucit.kitchen_witchenmc_project.ui.cart"
        android:label="@string/cart"
        tools:layout="@layout/cart">
    <action
        android:id="@+id/action_cart_to_home"
        app:destination="@id/nav_cat_menu" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    <!--<fragment
        android:id="@+id/nav_logout"
        android:name="pk.edu.pucit.kitchen_witchenmc_project.MainActivity"
        tools:layout="@layout/activity_main" />-->
</navigation>