<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/white"
        android:padding="15dp">
        <ImageView
            android:id="@+id/dish_item_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />
        <TextView
            android:id="@+id/dish_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/dish_item_image"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/dish_item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ingredients"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_item_name" />
        <TextView
            android:id="@+id/price_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PKR "
            android:textColor="@color/colorAccent"
            android:layout_margin="20dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_item_detail"/>
        <TextView
            android:id="@+id/dish_item_price"
            android:layout_width="wrap_content"
            android:text="@string/price"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/dish_item_detail"
            app:layout_constraintStart_toEndOf="@id/price_lbl"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDec"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/dec"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_item_price" />

        <TextView
            android:id="@+id/dish_item_quantity"
            android:layout_width="wrap_content"
            android:text="Qty"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/dish_item_price"
            app:layout_constraintStart_toEndOf="@id/btnDec"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnInc"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/inc"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/dish_item_price"
            app:layout_constraintStart_toEndOf="@id/dish_item_quantity"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/add_to_cart"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/dish_item_quantity"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>