<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

</androidx.constraintlayout.widget.ConstraintLayout>
=======
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:ignore="MissingConstraints">

    <androidx.cardview.widget.CardView
        android:id="@+id/clayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="17dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/dish_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dish_price"
                android:layout_width="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/dish_name"
                app:layout_constraintStart_toStartOf="@id/dish_name"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dish_location"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:text="@string/location"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="@+id/dish_name"
                app:layout_constraintTop_toBottomOf="@+id/dish_price" />

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/add_to_cart"
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@id/dish_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

>>>>>>> home_dish_layout
