<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    tools:ignore="MissingConstraints">

    <androidx.cardview.widget.CardView
        android:id="@+id/menu_layout"
        android:background="@color/cardBg"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:layout_margin="20dp"
                app:layout_constraintStart_toEndOf="@id/dish_image"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/dish_cat"
                android:layout_width="wrap_content"
                android:text="@string/category"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/dish_name"
                app:layout_constraintStart_toEndOf="@id/dish_image"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/dish_price"
                android:layout_width="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorAccent"
                android:textSize="25dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/dish_cat"
                app:layout_constraintStart_toEndOf="@id/dish_image"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/dish_ingredients"
                android:layout_width="wrap_content"
                android:text="@string/ingredients"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:layout_marginStart="20dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/dish_price"
                app:layout_constraintStart_toEndOf="@id/dish_image"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/edtDish"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Remove dish"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>